RESOLVED FIXED52169
[chromium] Call WebAutoFillClient instead of WebViewClient for autofill related callbacks
https://bugs.webkit.org/show_bug.cgi?id=52169
Summary [chromium] Call WebAutoFillClient instead of WebViewClient for autofill relat...
John Abd-El-Malek
Reported 2011-01-10 13:17:51 PST
[chromium] Call WebAutoFillClient instead of WebViewClient for autofill related callbacks
Attachments
Patch (17.28 KB, patch)
2011-01-10 13:25 PST, John Abd-El-Malek
no flags
Patch (17.54 KB, patch)
2011-01-10 14:01 PST, John Abd-El-Malek
no flags
Patch (19.35 KB, patch)
2011-01-10 14:37 PST, John Abd-El-Malek
no flags
Patch (19.66 KB, patch)
2011-01-10 15:52 PST, John Abd-El-Malek
jamesr: review+
John Abd-El-Malek
Comment 1 2011-01-10 13:25:56 PST
WebKit Review Bot
Comment 2 2011-01-10 13:27:27 PST
Attachment 78442 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'WebKit/chromium/ChangeLog', u'WebKit/chromium/public/WebView.h', u'WebKit/chromium/public/WebViewClient.h', u'WebKit/chromium/src/AutoFillPopupMenuClient.cpp', u'WebKit/chromium/src/EditorClientImpl.cpp', u'WebKit/chromium/src/WebViewImpl.cpp', u'WebKit/chromium/src/WebViewImpl.h', u'WebKit/chromium/src/WebWorkerBase.cpp']" exit_code: 1 WebKit/chromium/src/WebViewImpl.h:370: The parameter name "client" adds no information, so it should be removed. [readability/parameter_name] [5] WebKit/chromium/src/WebViewImpl.h:372: The parameter name "autoFillClient" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Abd-El-Malek
Comment 3 2011-01-10 13:30:12 PST
hey guys, this is part of the autofill cleanup in RenderView. It does touch one function in the WebKit API (WebView::create), but I don't think it needs Darin's approval since he had already approved the interface that's used there.
WebKit Review Bot
Comment 4 2011-01-10 13:30:16 PST
John Abd-El-Malek
Comment 5 2011-01-10 13:32:05 PST
(In reply to comment #4) > Attachment 78442 [details] did not build on chromium: > Build output: http://queues.webkit.org/results/7410129 build failure is because it's using an old version of Chrome. that specific code now has an ifdef for WEBKIT_HAS_WEB_AUTO_FILL_CLIENT
James Robinson
Comment 6 2011-01-10 13:32:55 PST
It's using the version specified in WebKit/chromium/DEPS. You'll have to roll that as well in order to keep the build.webkit.org bots compiling.
John Abd-El-Malek
Comment 7 2011-01-10 13:41:17 PST
(In reply to comment #6) > It's using the version specified in WebKit/chromium/DEPS. You'll have to roll that as well in order to keep the build.webkit.org bots compiling. thanks, I didn't know about that. updating
James Robinson
Comment 8 2011-01-10 13:42:39 PST
Comment on attachment 78442 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=78442&action=review Please update the chromium_rev line in WebKit/chromium/DEPS so the builds don't break. > WebKit/chromium/src/WebViewImpl.h:372 > + WebViewImpl(WebViewClient* client, > + WebDevToolsAgentClient* devToolsClient, > + WebAutoFillClient* autoFillClient); WebKit style is to leave out the parameter names for params like this.
John Abd-El-Malek
Comment 9 2011-01-10 13:44:47 PST
Comment on attachment 78442 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=78442&action=review >> WebKit/chromium/src/WebViewImpl.h:372 >> + WebAutoFillClient* autoFillClient); > > WebKit style is to leave out the parameter names for params like this. right, I was trying to be consistent with the two other existing parameters though. Should I change them as well?
James Robinson
Comment 10 2011-01-10 13:47:49 PST
(In reply to comment #9) > (From update of attachment 78442 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=78442&action=review > > >> WebKit/chromium/src/WebViewImpl.h:372 > >> + WebAutoFillClient* autoFillClient); > > > > WebKit style is to leave out the parameter names for params like this. > > right, I was trying to be consistent with the two other existing parameters though. Should I change them as well? Yeah - nuke 'em all so the style checker stays quiet.
John Abd-El-Malek
Comment 11 2011-01-10 14:01:19 PST
WebKit Review Bot
Comment 12 2011-01-10 14:15:04 PST
James Robinson
Comment 13 2011-01-10 14:30:56 PST
Comment on attachment 78449 [details] Patch Looks like you have to edit TestShell.cpp as well.
John Abd-El-Malek
Comment 14 2011-01-10 14:33:55 PST
(In reply to comment #13) > (From update of attachment 78449 [details]) > Looks like you have to edit TestShell.cpp as well. yep, on it. I didn't know that many places used WebView::create, including some more in Chrome :)
John Abd-El-Malek
Comment 15 2011-01-10 14:37:22 PST
WebKit Review Bot
Comment 16 2011-01-10 14:53:46 PST
John Abd-El-Malek
Comment 17 2011-01-10 14:56:19 PST
(In reply to comment #16) > Attachment 78452 [details] did not build on chromium: > Build output: http://queues.webkit.org/results/7374117 this one is not my fault! looks like a buildbot error
John Abd-El-Malek
Comment 18 2011-01-10 15:52:57 PST
John Abd-El-Malek
Comment 19 2011-01-10 15:53:26 PST
(In reply to comment #17) > (In reply to comment #16) > > Attachment 78452 [details] [details] did not build on chromium: > > Build output: http://queues.webkit.org/results/7374117 > > this one is not my fault! looks like a buildbot error James explained the problem, fixed
James Robinson
Comment 20 2011-01-10 15:57:39 PST
I think this looks all right, gonna wait for the cr-linux bot to cycle just to be sure ui.gyp doesn't have any other nasty dependencies.
James Robinson
Comment 21 2011-01-10 16:06:25 PST
Comment on attachment 78464 [details] Patch R=me
John Abd-El-Malek
Comment 22 2011-01-10 16:27:57 PST
Note You need to log in before you can comment on or make changes to this bug.