2011-01-10  John Abd-El-Malek  <jam@chromium.org>

Reviewed by James Robinson.

        [chromium] Call WebAutoFillClient instead of WebViewClient for autofill related callbacks
        https://bugs.webkit.org/show_bug.cgi?id=52169

        * public/WebView.h:
        * public/WebViewClient.h:
        (WebKit::WebViewClient::didUpdateInspectorSetting):
        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::valueChanged):
        (WebKit::AutoFillPopupMenuClient::selectionChanged):
        (WebKit::AutoFillPopupMenuClient::selectionCleared):
        (WebKit::AutoFillPopupMenuClient::popupDidHide):
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::textFieldDidBeginEditing):
        (WebKit::EditorClientImpl::textFieldDidEndEditing):
        (WebKit::EditorClientImpl::textDidChangeInTextField):
        (WebKit::EditorClientImpl::doAutofill):
        (WebKit::EditorClientImpl::onAutocompleteSuggestionAccepted):
        (WebKit::EditorClientImpl::doTextFieldCommandFromEvent):
        * src/WebViewImpl.cpp:
        (WebKit::WebView::create):
        (WebKit::WebViewImpl::WebViewImpl):
        (WebKit::WebViewImpl::autocompleteHandleKeyEvent):
        * src/WebViewImpl.h:
        (WebKit::WebViewImpl::autoFillClient):
        * src/WebWorkerBase.cpp:
        (WebKit::WebWorkerBase::initializeLoader):


Canonical link: https://commits.webkit.org/65746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75448 268f45cc-cd09-0410-ab3c-d52691b4dbfc