Tools/DumpRenderTree/chromium/TestShell.cpp
@@ -571,7 +571,7 @@ WebViewHost* TestShell::createNewWindow(const WebKit::WebURL& url)
 WebViewHost* TestShell::createNewWindow(const WebKit::WebURL& url, DRTDevToolsAgent* devToolsAgent)
 {
     WebViewHost* host = new WebViewHost(this);
-    WebView* view = WebView::create(host, devToolsAgent);
+    WebView* view = WebView::create(host, devToolsAgent, 0);
     host->setWebWidget(view);
     m_prefs.applyTo(view);
     view->initializeMainFrame(host);
